We need an option to let gpg and thus gpgme keep on processing all signatures even in batch mode.
Currently --batch mode stops verification at the first bad signature. See T6870
Description
Description
Revisions and Commits
Revisions and Commits
rG GnuPG | |||
rG5276a1373c8a gpg: New option --proc-all-sigs | |||
rGcb739bb2a579 gpg: New option --proc-all-sigs | |||
rG1eb382fb1f43 gpg: New option --proc-all-sigs | |||
rM GPGME | |||
rM37aa9eee7c56 New context flag "proc-all-sigs". |
Status | Assigned | Task | ||
---|---|---|---|---|
Resolved | • ebo | T6870 Kleopatra: Improve representation of signature verification result in case of multiple signatures | ||
Resolved | • werner | T7261 Option to process all signatures in --batch mode |
Event Timeline
Comment Actions
Also added a new gpgme context flag "proc-all-sigs" and a --porc-all-sigs option to gpgme's run-verify.c tool.